--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
 body {
   margin: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
-html{
-  height:100%;
+html {
+  height: 100%;
 }
-body{
+body {
   height: 100%;
   background-color: white;
-  color:white;
+  color: white;
 }
 body {
   margin: 0;
@@ -27,50 +27,50 @@ body {
   align-items: center;
   justify-content: center;
 }
-.weather-widget{
+.weather-widget {
   /*background-image: url("../public/content/Bitmap.png");*/
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  padding:20px;
-  width:800px;
-  height:593px;
+  padding: 20px;
+  max-width: 100%;
+  height: 593px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   border-radius: 8px;
   text-align: center;
 }
-.weather-widget .days-container{
+.weather-widget .days-container {
   display: flex;
   justify-content: space-around;
-  font-size:14px;
+  font-size: 14px;
 }
-.icon-big{
-  height:20px;
-  width:auto;
+.icon-big {
+  height: 20px;
+  width: auto;
 }
-.title{
+.title {
   font-weight: 100;
   font-size: 39px;
 }
-.temp-title{
+.temp-title {
   font-weight: 100;
   font-size: 60px;
 }
-.detail-title{
+.detail-title {
   font-weight: 100;
   font-size: 20px;
 }
-.controlli{
+.controlli {
   margin-bottom: 20px;
-  padding:10px;
-  background-color:white;
-  display:flex;
+  padding: 10px;
+  background-color: white;
+  display: flex;
   justify-content: space-between;
 }
-.days{
+.days {
   text-align: center;
   border-radius: 9px;
   position: relative;
@@ -80,9 +80,9 @@ body {
   flex-direction: column;
   justify-content: space-between;
   padding: 17px;
-  cursor:pointer;
+  cursor: pointer;
 }
-.selected::before{
+.selected::before {
   position: absolute;
   top: 0;
   left: 0;
@@ -93,24 +93,24 @@ body {
   content: " ";
   border-radius: 8px;
   margin: 4px;
-  padding:1px;
-  cursor:initial;
+  padding: 1px;
+  cursor: initial;
   border: 2px solid #cccccc;
 }
 
-.icon-lg{
-  height:100px;
-  width:auto;
+.icon-lg {
+  height: 100px;
+  width: auto;
 }
-.icon-md{
-  height:40px;
-  width:auto;
+.icon-md {
+  height: 40px;
+  width: auto;
 }
-.icon-sm{
-  height:20px;
-  width:auto;
+.icon-sm {
+  height: 20px;
+  width: auto;
 }
-.button{
+.button {
   border: none;
   border-radius: 4px;
   padding: 0 16px;
@@ -121,7 +121,7 @@ body {
   text-overflow: ellipsis;
   text-transform: uppercase;
 }
-.text{
+.text {
   border: 1px solid gray;
   border-radius: 4px;
   padding: 0 16px;
