--- a/src/index.css
+++ b/src/index.css
@@ -11,36 +11,27 @@ body {
   height: 100%;
   background-color: white;
   color: white;
+  padding: 5px;
 }
 body {
   margin: 0;
-}
-.flex-container {
-  height: 100%;
-  padding: 0;
-  margin: 0;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 .weather-widget {
   /*background-image: url("../public/content/Bitmap.png");*/
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  padding: 20px;
-  max-width: 100%;
-  height: 593px;
+  padding: 10px;
+  max-width: 800px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   border-radius: 8px;
   text-align: center;
+  height: 100%;
+  position: relative;
+  margin: 0 auto;
 }
 .weather-widget .days-container {
   display: flex;
@@ -64,23 +55,23 @@ body {
   font-size: 20px;
 }
 .controlli {
-  margin-bottom: 20px;
-  padding: 10px;
   background-color: white;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 10px;
 }
 .days {
   text-align: center;
   border-radius: 9px;
   position: relative;
-  width: 100%;
+  width: 14%;
   height: 130px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 17px;
+  padding: 0;
   cursor: pointer;
+  font-size: max(1vw, 13px);
 }
 .selected::before {
   position: absolute;
@@ -92,10 +83,9 @@ body {
   opacity: 0.3;
   content: " ";
   border-radius: 8px;
-  margin: 4px;
-  padding: 1px;
   cursor: initial;
   border: 2px solid #cccccc;
+  height: 100%;
 }
 
 .icon-lg {
@@ -113,8 +103,6 @@ body {
 .button {
   border: none;
   border-radius: 4px;
-  padding: 0 16px;
-  min-width: 64px;
   height: 36px;
   vertical-align: middle;
   text-align: center;
@@ -124,9 +112,7 @@ body {
 .text {
   border: 1px solid gray;
   border-radius: 4px;
-  padding: 0 16px;
-  min-width: 64px;
-  height: 36px;
+  height: 34px;
   vertical-align: middle;
   text-align: center;
   text-overflow: ellipsis;
